--- a/mq/rocketmq/rocketmq-srvdata/rocketmq-broker.conf
+++ b/mq/rocketmq/rocketmq-srvdata/rocketmq-broker.conf
@@ -68,24 +68,14 @@ maxMessageSize=65536
 #flushConsumeQueueThoroughInterval=60000
 
 #Broker 的角色
-
-
-
-
-
-
-
-　　　　- ASYNC_MASTER 异步复制Master
-　　　　- SYNC_MASTER 同步双写Master
-
-　　　　- SLAVE
+# 　　　　- ASYNC_MASTER 异步复制Master
+# 　　　　- SYNC_MASTER 同步双写Master
+# 　　　　- SLAVE
 brokerRole=ASYNC_MASTER
 
-刷盘方式
-#- ASYNC_FLUSH 
-异步刷盘
-#- SYNC_FLUSH 
-同步刷盘
+# 刷盘方式
+#- ASYNC_FLUSH # 异步刷盘
+#- SYNC_FLUSH  # 同步刷盘
 flushDiskType=ASYNC_FLUSH
 
 #checkTransactionMessageEnable=false
