--- a/mq/rocketmq/rocketmq-srvdata/rocketmq-broker.conf
+++ b/mq/rocketmq/rocketmq-srvdata/rocketmq-broker.conf
@@ -1,4 +1,5 @@
-https://www.cnblogs.com/mzcx/p/11412508.html
+# https://www.cnblogs.com/mzcx/p/11412508.html
+# Broker 配置文件详解
 
 #所属集群名字
 brokerClusterName=rocketmq-cluster
@@ -26,10 +27,10 @@ deleteWhen=04
 #文件保留时间，默认 48 小时
 fileReservedTime=120
 
-#commitLog每个文件的大小默认1G
+#commitLog 每个文件的大小默认1G
 mapedFileSizeCommitLog=1073741824
 
-#ConsumeQueue每个文件默认存30W条，根据业务情况调整
+#ConsumeQueue 每个文件默认存30W条，根据业务情况调整
 mapedFileSizeConsumeQueue=300000
 
 #destroyMapedFileIntervalForcibly=120000
@@ -41,6 +42,7 @@ diskMaxUsedSpaceRatio=88
 
 #存储路径
 storePathRootDir=/usr/local/alibaba-rocketmq/store
+
 #commitLog 存储路径
 storePathCommitLog=/usr/local/alibaba-rocketmq/store/commitlog
 
